--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,4 +6,5 @@ repo_url: https://github.com/thePortus/his4936-starter/
 repo_name: 'GitHub'
 pages:
 - Home: 'index.md'
+- Getting Started: 'getting_started.md'
 - Credits: 'credits.md'
